<resources>
    <string name="app_name">GAPPi</string>
    <string name="action_settings">Settings</string>
    <string name="don_t_blame_us">Don\'t blame us if your data exhausted!</string>
    <string name="blob_slogan">an aweoo app</string>
    <string name="gapee">GAPPEE</string>
    <string name="gappi">GAPPI</string>
    <string name="skip">skip</string>
    <string name="next">NEXT</string>
    <string name="app_description">app_description</string>
    <array name="app_heading">
        <item>SIMPLE ABROAD CALLS</item>
        <item>FREE CALLS AMONG GAPPi’s</item>
        <item>NO HIDDEN CHARGES OR FEES</item>
    </array>
    <array name="app_description">
        <item>Simple Video calls among friends anywhere in the the world with the ease.</item>
        <item>if the person you’re calling also has GAPPi the call will be entirely free</item>
        <item>We just need ur data if you don’t mind.</item>
    </array>
</resources>
