<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.SplashActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/oval" />

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/oval" />

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/oval" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_blame_us"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textIsSelectable="false"
        android:textSize="@dimen/textSizeLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:alpha=".5"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge"
        android:text="@string/gappi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:alpha=".3"
        android:text="@string/gapee"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/textView2"
        android:text="@string/blob_slogan"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeSmall" />
</RelativeLayout>
